--- a/nbs/client/core.ipynb
+++ b/nbs/client/core.ipynb
@@ -1,25 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# core\n",
-    "\n",
-    "> Base classes and routes for authentication, and dealing with api responses.\n",
-    "\n",
-    "- `DomoAuth` encapsulates authentication.  Can init with username/password or access_token\n",
-    "- For consistency, use `domo_api_request` to handle API requests in route functions.  `domo_api_requests` and `route functions` should always return an instance of `ResponseGetData` class.  For streaming responses, use `domo_api_stream_request` to automagically download API responses in route functions.\n",
-    "- `Route Functions` should always throw an error if not `ResponseGetData.is_success`\n",
-    "\n",
-    "Features or classes are implemented as separate notebooks and then exported into their own module folder (see `default_exp` line in each .ipynb file)\n",
-    "- each feature should be implemented as series of route functions ('GET', 'PUT', 'POST' requests), then a `@dataclass` class may be used to represent the feature with methods that wrap and provide logic around route functions.\n",
-    "    - ex. an UPSERT method might wrap logic to test if the entity already exists (in which case call the PUT route) or create the entity if it doesn't already exist ('POST')\n",
-    "- `@classmethods` return an instance of the class\n",
-    "    - ex. each class should have a `get_by_id` method which returns an instance of the entity (typically the result of the search datacenter API)\n",
-    "\n",
-    "Implementations, take a set of features and create a use case or project\n",
-    "    - ex.back up code engine and custom app (features) into appdb collections (feature)"
+    "---\n",
+    "title: Core\n",
+    "output-file: client/core.html\n",
+    "---"
    ]
   },
   {
@@ -29,6 +17,26 @@
    "outputs": [],
    "source": [
     "# | default_exp client.core"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Base classes and routes for authentication, and dealing with api responses.\n",
+    "\n",
+    "- `DomoAuth` encapsulates authentication. Can init with username/password or access_token\n",
+    "- For consistency, use `domo_api_request` to handle API requests in route functions. `domo_api_requests` and `route functions` should always return an instance of `ResponseGetData` class. For streaming responses, use `domo_api_stream_request` to automagically download API responses in route functions.\n",
+    "- `Route Functions` should always throw an error if not `ResponseGetData.is_success`\n",
+    "\n",
+    "Features or classes are implemented as separate notebooks and then exported into their own module folder (see `default_exp` line in each .ipynb file)\n",
+    "\n",
+    "- each feature should be implemented as series of route functions ('GET', 'PUT', 'POST' requests), then a `@dataclass` class may be used to represent the feature with methods that wrap and provide logic around route functions.\n",
+    "  - ex. an UPSERT method might wrap logic to test if the entity already exists (in which case call the PUT route) or create the entity if it doesn't already exist ('POST')\n",
+    "- `@classmethods` return an instance of the class\n",
+    "  - ex. each class should have a `get_by_id` method which returns an instance of the entity (typically the result of the search datacenter API)\n",
+    "\n",
+    "Implementations, take a set of features and create a use case or project - ex.back up code engine and custom app (features) into appdb collections (feature)\n"
    ]
   },
   {
@@ -47,7 +55,9 @@
     "\n",
     "from pprint import pprint\n",
     "\n",
-    "import mbison.utils as dmut"
+    "import mbison.utils as dmut\n",
+    "\n",
+    "from nbdev.showdoc import patch_to"
    ]
   },
   {
@@ -67,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | export\n",
+    "# | exports\n",
     "\n",
     "\n",
     "def get_jupyter_account(account_name, domojupyter_fn: Callable):\n",
@@ -94,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DomoAuth class\n"
+    "## handling authentication"
    ]
   },
   {
@@ -103,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | export\n",
+    "# | exports\n",
     "\n",
     "\n",
     "@dataclass\n",
@@ -134,46 +144,6 @@
     "                access_token=access_token,\n",
     "                domo_instance=domo_instance,\n",
     "            )\n",
-    "\n",
-    "    def __post_init__(self):\n",
-    "\n",
-    "        if self.username and self.password:\n",
-    "            print(\"*** Using Username/Password Auth\")\n",
-    "            self._init_session_token_from_username_password_auth()\n",
-    "            return\n",
-    "\n",
-    "        if self.access_token:\n",
-    "            print(\"*** Using Access Token Auth\")\n",
-    "            return\n",
-    "\n",
-    "        else:\n",
-    "            raise Exception(\n",
-    "                \"*** Domo Auth init error: ERROR - valid credential combination not Detected, must pass username and password or session_token\"\n",
-    "            )\n",
-    "\n",
-    "    def _init_session_token_from_username_password_auth(self):\n",
-    "        url = f\"https://{self.domo_instance}/api/content/v2/authentication\"\n",
-    "\n",
-    "        payload = {\n",
-    "            \"method\": \"password\",\n",
-    "            \"emailAddress\": self.username,\n",
-    "            \"password\": self.password,\n",
-    "        }\n",
-    "\n",
-    "        try:\n",
-    "            response = requests.post(url, json=payload, headers=self.headers, timeout=3)\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            print(\"init_session_token - request error: \" + str(e))\n",
-    "\n",
-    "        self.session_token = response.json().get(\"sessionToken\")\n",
-    "\n",
-    "        if not self.session_token:\n",
-    "            raise Exception(\n",
-    "                f\"init_session_token -- unable to retrieve token - {response.text}\"\n",
-    "            )\n",
-    "\n",
-    "        return self.session_token\n",
     "\n",
     "    def generate_request_headers(self):\n",
     "        headers = {\n",
@@ -213,10 +183,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | exporti\n",
+    "\n",
+    "\n",
+    "@patch_to(DomoAuth)\n",
+    "def __post_init__(self):\n",
+    "\n",
+    "    if self.username and self.password:\n",
+    "        print(\"*** Using Username/Password Auth\")\n",
+    "        self._init_session_token_from_username_password_auth()\n",
+    "        return\n",
+    "\n",
+    "    if self.access_token:\n",
+    "        print(\"*** Using Access Token Auth\")\n",
+    "        return\n",
+    "\n",
+    "    else:\n",
+    "        raise Exception(\n",
+    "            \"*** Domo Auth init error: ERROR - valid credential combination not Detected, must pass username and password or session_token\"\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "@patch_to(DomoAuth)\n",
+    "def _init_session_token_from_username_password_auth(self):\n",
+    "    url = f\"https://{self.domo_instance}/api/content/v2/authentication\"\n",
+    "\n",
+    "    payload = {\n",
+    "        \"method\": \"password\",\n",
+    "        \"emailAddress\": self.username,\n",
+    "        \"password\": self.password,\n",
+    "    }\n",
+    "\n",
+    "    try:\n",
+    "        response = requests.post(url, json=payload, headers=self.headers, timeout=3)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"init_session_token - request error: \" + str(e))\n",
+    "\n",
+    "    self.session_token = response.json().get(\"sessionToken\")\n",
+    "\n",
+    "    if not self.session_token:\n",
+    "        raise Exception(\n",
+    "            f\"init_session_token -- unable to retrieve token - {response.text}\"\n",
+    "        )\n",
+    "\n",
+    "    return self.session_token"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### sample DomoAuth\n"
+    "#### sample DomoAuth\n"
    ]
   },
   {
@@ -228,7 +251,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*** Using Access Token Auth\n",
       "{'id': 1893952720, 'invitorUserId': 587894148, 'displayName': 'Jae Wilson1', 'department': 'Business Improvement', 'userName': 'jae@onyxreporting.com', 'emailAddress': 'jae@datacrew.space', 'avatarKey': 'c605f478-0cd2-4451-9fd4-d82090b71e66', 'accepted': True, 'userType': 'USER', 'modified': 1721264727737, 'created': 1588960518, 'active': True, 'pending': False, 'anonymous': False, 'systemUser': False}\n"
      ]
     },
@@ -249,7 +271,7 @@
     "    access_token=os.environ[\"DOMO_ACCESS_TOKEN\"],\n",
     ")\n",
     "\n",
-    "print(auth.who_am_i(return_raw= False))\n",
+    "print(auth.who_am_i(return_raw=False))\n",
     "auth"
    ]
   },
@@ -257,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## domo_api_request\n"
+    "## sending requests"
    ]
   },
   {
@@ -266,16 +288,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | export\n",
+    "# | exports\n",
     "\n",
     "\n",
     "class API_Exception(Exception):\n",
     "\n",
     "    def __init__(self, res, message: str = None):\n",
     "        message = message or \"\"\n",
-    "\n",
     "        base = f\" || {str(res.status)} - {res.response.get('message') or res.response.get('statusReason')} || {res.auth.domo_instance}\"\n",
-    "\n",
     "        message += base\n",
     "\n",
     "        super().__init__(message)\n",
@@ -283,10 +303,11 @@
     "\n",
     "@dataclass\n",
     "class ResponseGetData:\n",
+    "    auth: DomoAuth = field(repr=False)\n",
     "    response: dict\n",
     "    is_success: bool\n",
     "    status: int\n",
-    "    auth: DomoAuth = field(repr=False)\n",
+    "    download_path: str = None\n",
     "\n",
     "    @classmethod\n",
     "    def from_response(cls, res, auth: DomoAuth):\n",
@@ -310,8 +331,8 @@
     "        return True\n",
     "\n",
     "    @staticmethod\n",
-    "    def _read_stream(file_name: str):\n",
-    "        with open(file_name, \"rb\") as f:\n",
+    "    def read_stream(download_path ):\n",
+    "        with open(download_path , \"rb\") as f:\n",
     "            return f.read()\n",
     "\n",
     "    @classmethod\n",
@@ -324,12 +345,23 @@
     "        cls._write_stream(res, download_path)\n",
     "\n",
     "        return cls(\n",
-    "            response=cls._read_stream(download_path),\n",
+    "            response=True if cls.read_stream(download_path) else False,\n",
     "            is_success=res.ok,\n",
     "            status=res.status_code,\n",
     "            auth=auth,\n",
+    "            download_path = download_path\n",
     "        )\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | exports\n",
     "\n",
     "def domo_api_request(\n",
     "    auth: DomoAuth,\n",
@@ -376,17 +408,7 @@
     "    if return_raw:\n",
     "        return response\n",
     "\n",
-    "    return ResponseGetData.from_response(res=response, auth=auth)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "\n",
+    "    return ResponseGetData.from_response(res=response, auth=auth)\n",
     "\n",
     "def domo_api_stream_request(\n",
     "    auth: DomoAuth,\n",
@@ -421,13 +443,11 @@
     "    res = requests.get(\n",
     "        url=url, headers=headers, params=params, timeout=timeout, stream=True\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    if not res.ok:\n",
     "        return ResponseGetData.from_response(res=res, auth=auth)\n",
     "\n",
-    "    return ResponseGetData.from_stream(\n",
-    "        res=res, download_path=download_path, auth=auth\n",
-    "    )"
+    "    return ResponseGetData.from_stream(res=res, download_path=download_path, auth=auth)"
    ]
   },
   {
