--- a/nbs/client/utils.ipynb
+++ b/nbs/client/utils.ipynb
@@ -1,12 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: utils\n",
+    "output-file: /client/utils.html\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp utils"
+    "#| default_exp client.utils"
    ]
   },
   {
@@ -22,6 +32,16 @@
     "\n",
     "import zipfile\n",
     "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "import nbdev"
    ]
   },
   {
@@ -106,7 +126,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "import nbdev\n",
+    "\n",
     "nbdev.nbdev_export('./utils.ipynb')"
    ]
   }
