--- a/nbs/feature/codeengine.ipynb
+++ b/nbs/feature/codeengine.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "title: CodeEngine\n",
+    "output-file: feature/codeengine.html\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -63,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "\n",
     "def get_packages(auth: dmda.DomoAuth, debug_api : bool = False):\n",
     "    endpoint = \"/api/codeengine/v2/packages\"\n",
@@ -94,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "\n",
     "def get_package_by_id(auth: dmda.DomoAuth, package_id, debug_api : bool = False):\n",
     "        \n",
@@ -118,9 +129,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "\n",
     "def get_package_versions(auth: dmda.DomoAuth, package_id, debug_api : bool = False):\n",
+    "        \"\"\"each package can have one or many version\"\"\"\n",
     "        \n",
     "        endpoint = f\"/api/codeengine/v2/packages/{package_id}/versions/\"\n",
     "\n",
@@ -176,10 +188,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "\n",
     "@dataclass \n",
     "class DomoCodeEngine_PackageVersion:\n",
+    "    \"\"\"one package can have multiple versions\"\"\"\n",
+    "    \n",
     "    auth : dmda.DomoAuth = field(repr = False)\n",
     "    package_id: str\n",
     "    version : str\n",
@@ -237,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | export\n",
+    "# | exports\n",
     "\n",
     "\n",
     "@dataclass\n",
@@ -258,8 +272,8 @@
     "    description: str = None\n",
     "    language: str = None\n",
     "\n",
-    "    dce_versions : List[DomoCodeEngine_PackageVersion] = None\n",
-    "    dce_current_version : DomoCodeEngine_PackageVersion = None\n",
+    "    dce_versions: List[DomoCodeEngine_PackageVersion] = None\n",
+    "    dce_current_version: DomoCodeEngine_PackageVersion = None\n",
     "\n",
     "    @classmethod\n",
     "    def from_json(cls, auth: dmda.DomoAuth, obj):\n",
@@ -276,7 +290,7 @@
     "            updated_on_dt=obj[\"updatedOn\"],\n",
     "            source=obj[\"packageSource\"],\n",
     "            description=obj.get(\"description\"),\n",
-    "            current_version = obj.get('versions')[0]['version']\n",
+    "            current_version=obj.get(\"versions\")[0][\"version\"],\n",
     "        )\n",
     "\n",
     "    @classmethod\n",
@@ -293,34 +307,39 @@
     "            return res\n",
     "\n",
     "        return cls.from_json(auth=auth, obj=res.response)\n",
-    "    \n",
+    "\n",
     "    def get_versions(self, debug_api: bool = False, return_raw: bool = False):\n",
     "\n",
-    "        res = get_package_versions(auth = self.auth, package_id=self.id, debug_api=debug_api)\n",
+    "        res = get_package_versions(\n",
+    "            auth=self.auth, package_id=self.id, debug_api=debug_api\n",
+    "        )\n",
     "\n",
     "        if return_raw:\n",
     "            return res\n",
-    "        \n",
-    "        self.dce_versions = [ DomoCodeEngine_PackageVersion.from_json(auth = self.auth, obj = obj) for obj in res.response]\n",
-    "        \n",
+    "\n",
+    "        self.dce_versions = [\n",
+    "            DomoCodeEngine_PackageVersion.from_json(auth=self.auth, obj=obj)\n",
+    "            for obj in res.response\n",
+    "        ]\n",
+    "\n",
     "        return self.dce_versions\n",
-    "    \n",
+    "\n",
     "    def get_current_version(self, debug_api: bool = False, return_raw: bool = False):\n",
     "\n",
-    "        res = DomoCodeEngine_PackageVersion.get_by_id(auth = self.auth, \n",
-    "                                                                  package_id=self.id, \n",
-    "                                                                  version = self.current_version, \n",
-    "                                                                  debug_api= debug_api, \n",
-    "                                                                  return_raw=return_raw)\n",
-    "        \n",
+    "        res = DomoCodeEngine_PackageVersion.get_by_id(\n",
+    "            auth=self.auth,\n",
+    "            package_id=self.id,\n",
+    "            version=self.current_version,\n",
+    "            debug_api=debug_api,\n",
+    "            return_raw=return_raw,\n",
+    "        )\n",
+    "\n",
     "        if return_raw:\n",
     "            return res\n",
-    "        \n",
+    "\n",
     "        self.dce_current_version = res\n",
-    "        \n",
-    "        return self.dce_current_version\n",
-    "        \n",
-    "        "
+    "\n",
+    "        return self.dce_current_version"
    ]
   },
   {
