--- a/nbs/feature/datasets.ipynb
+++ b/nbs/feature/datasets.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Dataset\n",
+    "output-file: feature/dataset.html\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature - Dataset\n",
-    "\n",
-    "> Fill in a module description here"
+    "# Dataset\n"
    ]
   },
   {
@@ -15,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp feature.dataset"
+    "# | default_exp feature.dataset"
    ]
   },
   {
@@ -24,10 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| importi\n",
+    "# | importi\n",
     "from dataclasses import dataclass, field\n",
     "\n",
-    "from typing import  List\n",
+    "from typing import List\n",
     "\n",
     "import mbison.client.core as dmda"
    ]
@@ -38,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "import nbdev; \n",
+    "# | hide\n",
+    "import nbdev\n",
     "\n",
     "import os"
    ]
@@ -48,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Datasets"
+    "## Routes\n"
    ]
   },
   {
@@ -57,35 +65,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
-    "def get_datasets(auth : dmda.DomoAuth, debug_api : bool = False, return_raw: bool = False):\n",
-    "    endpoint = '/api/data/ui/v3/datasources/search'\n",
+    "# | exports\n",
+    "\n",
+    "\n",
+    "def get_datasets(\n",
+    "    auth: dmda.DomoAuth, debug_api: bool = False, return_raw: bool = False\n",
+    "):\n",
+    "    endpoint = \"/api/data/ui/v3/datasources/search\"\n",
     "\n",
     "    payload = {\n",
-    "            \"entities\": [\"DATASET\"],\n",
-    "            \"filters\": [],\n",
-    "            \"combineResults\":\"true\",\n",
-    "            \"query\":\"*\",\n",
-    "            \"count\":1000,\n",
-    "            \"offset\":0,\n",
-    "            \"sort\":{\"isRelevance\":\"false\",\n",
-    "                    \"fieldSorts\":[{\"field\":\"create_date\",\n",
-    "                                    \"sortOrder\":\"DESC\"}]}}\n",
-    "    \n",
+    "        \"entities\": [\"DATASET\"],\n",
+    "        \"filters\": [],\n",
+    "        \"combineResults\": \"true\",\n",
+    "        \"query\": \"*\",\n",
+    "        \"count\": 1000,\n",
+    "        \"offset\": 0,\n",
+    "        \"sort\": {\n",
+    "            \"isRelevance\": \"false\",\n",
+    "            \"fieldSorts\": [{\"field\": \"create_date\", \"sortOrder\": \"DESC\"}],\n",
+    "        },\n",
+    "    }\n",
+    "\n",
     "    res = dmda.domo_api_request(\n",
-    "        auth = auth,\n",
-    "        endpoint= endpoint,\n",
-    "        request_type='POST',\n",
-    "        debug_api= debug_api,\n",
-    "        body = payload\n",
-    "        \n",
+    "        auth=auth,\n",
+    "        endpoint=endpoint,\n",
+    "        request_type=\"POST\",\n",
+    "        debug_api=debug_api,\n",
+    "        body=payload,\n",
     "    )\n",
     "\n",
     "    if return_raw:\n",
     "        return res\n",
-    "    \n",
-    "    res.response = res.response['dataSources']\n",
-    "    \n",
+    "\n",
+    "    res.response = res.response[\"dataSources\"]\n",
+    "\n",
     "    return res"
    ]
   },
@@ -104,22 +117,22 @@
     {
      "data": {
       "text/plain": [
-       "[{'id': '398677b7-ca3a-4bc5-9f4d-3a579278b71d',\n",
+       "[{'id': 'fedef9a2-eddb-44d1-b0c9-a0023224e8d1',\n",
        "  'displayType': 'webform',\n",
        "  'dataProviderType': 'webform',\n",
        "  'type': 'webform',\n",
        "  'name': 'Example Sales Data',\n",
-       "  'owner': {'id': '1351541814',\n",
-       "   'name': 'jae wilson',\n",
+       "  'owner': {'id': '1728973208',\n",
+       "   'name': 'Peter Shull',\n",
        "   'type': 'USER',\n",
        "   'group': False},\n",
        "  'status': 'VALID',\n",
-       "  'created': 1714506702000,\n",
-       "  'lastUpdated': 1714506705068,\n",
+       "  'created': 1721655313000,\n",
+       "  'lastUpdated': 1721655316205,\n",
        "  'dataLastUpdated': 0,\n",
        "  'rowCount': 19378,\n",
        "  'columnCount': 5,\n",
-       "  'cardInfo': {'cardCount': 1, 'cardViewCount': 0},\n",
+       "  'cardInfo': {'cardCount': 2, 'cardViewCount': 0},\n",
        "  'state': 'VALID',\n",
        "  'validConfiguration': True,\n",
        "  'validAccount': True,\n",
@@ -130,7 +143,7 @@
        "  'cloudName': 'Domo',\n",
        "  'hidden': False,\n",
        "  'tagsList': [],\n",
-       "  'schema': {'name': '398677b7-ca3a-4bc5-9f4d-3a579278b71d',\n",
+       "  'schema': {'name': 'fedef9a2-eddb-44d1-b0c9-a0023224e8d1',\n",
        "   'tables': [{'columns': [{'name': 'date_ymd',\n",
        "       'id': 'date_ymd',\n",
        "       'type': 'DATE',\n",
@@ -159,7 +172,7 @@
        "  'alertCount': 0,\n",
        "  'dataFlowCount': 0,\n",
        "  'dataSourceCount': 0,\n",
-       "  'impactCardCount': 1,\n",
+       "  'impactCardCount': 2,\n",
        "  'impactAlertCount': 0,\n",
        "  'impactDataFlowCount': 0,\n",
        "  'impactDataSourceCount': 0}]"
@@ -171,22 +184,16 @@
     }
    ],
    "source": [
-    "auth = dmda.DomoAuth(domo_instance= os.environ['DOMO_INSTANCE'],\n",
-    "                access_token = os.environ['DOMO_ACCESS_TOKEN']\n",
-    "                )\n",
+    "auth = dmda.DomoAuth(\n",
+    "    domo_instance=os.environ[\"DOMO_INSTANCE\"],\n",
+    "    access_token=os.environ[\"DOMO_ACCESS_TOKEN\"],\n",
+    ")\n",
     "\n",
     "\n",
-    "res = get_datasets(auth = auth, debug_api= False)\n",
+    "res = get_datasets(auth=auth, debug_api=False)\n",
     "\n",
     "datasets = res.response\n",
     "datasets[0:1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### PDP"
    ]
   },
   {
@@ -195,30 +202,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|export \n",
+    "# |exports\n",
     "\n",
-    "def get_pdp_policies(auth : dmda.DomoAuth, datasetId):\n",
-    "        endpoint = f'/api/query/v1/data-control/{datasetId}/filter-groups'\n",
-    "        \n",
-    "        params = {\"options\": \"load_associations,load_filters,include_open_policy\"}\n",
     "\n",
-    "        response = dmda.domo_api_request(endpoint=endpoint,\n",
-    "                                    auth = auth, request_type= 'GET',\n",
-    "                                    params=params\n",
-    "                                    ) \n",
-    "        \n",
-    "        return response\n",
+    "def get_pdp_policies(auth: dmda.DomoAuth, datasetId):\n",
+    "    endpoint = f\"/api/query/v1/data-control/{datasetId}/filter-groups\"\n",
+    "\n",
+    "    params = {\"options\": \"load_associations,load_filters,include_open_policy\"}\n",
+    "\n",
+    "    response = dmda.domo_api_request(\n",
+    "        endpoint=endpoint, auth=auth, request_type=\"GET\", params=params\n",
+    "    )\n",
+    "\n",
+    "    return response\n",
+    "\n",
     "\n",
     "def get_pdp_policy(auth: dmda.DomoAuth, datasetId, policy_id):\n",
-    "        endpoint = f'/api/query/v1/data-control/{datasetId}/filter-groups/{policy_id}'\n",
+    "    endpoint = f\"/api/query/v1/data-control/{datasetId}/filter-groups/{policy_id}\"\n",
     "\n",
-    "        res = dmda.domo_api_request(\n",
-    "                auth = auth,\n",
-    "                method = 'GET',\n",
-    "                endpoint = endpoint,\n",
-    "                params = {'options':'load_associations,load_filters,include_open_policy'})\n",
-    "        \n",
-    "        return res"
+    "    res = dmda.domo_api_request(\n",
+    "        auth=auth,\n",
+    "        method=\"GET\",\n",
+    "        endpoint=endpoint,\n",
+    "        params={\"options\": \"load_associations,load_filters,include_open_policy\"},\n",
+    "    )\n",
+    "\n",
+    "    return res"
    ]
   },
   {
@@ -229,7 +238,7 @@
     {
      "data": {
       "text/plain": [
-       "RsponseGetData(response=[{'name': 'All Rows', 'filterGroupId': 7, 'dataSourceId': '398677b7-ca3a-4bc5-9f4d-3a579278b71d', 'type': 'open', 'dataSourcePermissions': False, 'order': 0}], is_success=True, status=200)"
+       "ResponseGetData(response=[{'name': 'All Rows', 'filterGroupId': 2380, 'dataSourceId': 'fedef9a2-eddb-44d1-b0c9-a0023224e8d1', 'type': 'open', 'dataSourcePermissions': False, 'order': 0}], is_success=True, status=200)"
       ]
      },
      "execution_count": null,
@@ -238,7 +247,7 @@
     }
    ],
    "source": [
-    "get_pdp_policies(auth = auth, datasetId=datasets[0]['id'])"
+    "get_pdp_policies(auth=auth, datasetId=datasets[0][\"id\"])"
    ]
   },
   {
@@ -247,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | export\n",
+    "# | exports\n",
     "\n",
     "\n",
     "def create_pdp_policy(auth: dmda.DomoAuth, datasetId: str, pdp_object: dict):\n",
@@ -286,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DomoDataset"
+    "## Classes"
    ]
   },
   {
@@ -295,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | export\n",
+    "# | exports\n",
     "\n",
     "\n",
     "@dataclass\n",
@@ -333,19 +342,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### DomoDatasets"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "# | exports\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class DomoDatasets:\n",
@@ -354,18 +357,17 @@
     "\n",
     "    domo_datasets: List[DomoDataset] = field(default_factory=lambda: [])\n",
     "\n",
-    "    def get_datasets(self, debug_api : bool = False, return_raw: bool = False):\n",
+    "    def get_datasets(self, debug_api: bool = False, return_raw: bool = False):\n",
     "\n",
-    "        res = get_datasets(self.auth, debug_api = debug_api)\n",
+    "        res = get_datasets(self.auth, debug_api=debug_api)\n",
     "\n",
-    "        if return_raw: \n",
+    "        if return_raw:\n",
     "            return res\n",
-    "        \n",
+    "\n",
     "        self.raw_datasets = res.response\n",
     "\n",
     "        self.domo_datasets = [\n",
-    "            DomoDataset._from_json(obj=obj, \n",
-    "                                   auth=self.auth) for obj in self.raw_datasets\n",
+    "            DomoDataset._from_json(obj=obj, auth=self.auth) for obj in self.raw_datasets\n",
     "        ]\n",
     "\n",
     "        return self.domo_datasets\n",
@@ -382,12 +384,11 @@
     {
      "data": {
       "text/plain": [
-       "[DomoDataset(id='398677b7-ca3a-4bc5-9f4d-3a579278b71d', name='Example Sales Data', auth=DomoAuth(domo_instance='datacrew-space', username=None), pdp_policies=None, domo_policies=None),\n",
-       " DomoDataset(id='38b145a6-297a-44b7-9507-94f1f3cb8e67', name='Example Sales', auth=DomoAuth(domo_instance='datacrew-space', username=None), pdp_policies=None, domo_policies=None),\n",
-       " DomoDataset(id='bdc28de2-58f1-4291-9436-bbc5ae793861', name='DST_TST_domo_api', auth=DomoAuth(domo_instance='datacrew-space', username=None), pdp_policies=None, domo_policies=None),\n",
-       " DomoDataset(id='28ea5493-e20c-47f6-9235-06d9624d31e2', name='Pricing product details', auth=DomoAuth(domo_instance='datacrew-space', username=None), pdp_policies=None, domo_policies=None),\n",
-       " DomoDataset(id='a0e82f76-3006-4025-b7f7-cdd0c2291f63', name='BF Sales by Hour', auth=DomoAuth(domo_instance='datacrew-space', username=None), pdp_policies=None, domo_policies=None),\n",
-       " DomoDataset(id='d32743ca-3c47-4d68-aaea-ff6f374727ac', name='Transaction product sales', auth=DomoAuth(domo_instance='datacrew-space', username=None), pdp_policies=None, domo_policies=None)]"
+       "[DomoDataset(id='fedef9a2-eddb-44d1-b0c9-a0023224e8d1', name='Example Sales Data', auth=DomoAuth(domo_instance='domo-community', username=None), pdp_policies=None, domo_policies=None),\n",
+       " DomoDataset(id='37fdfa92-ba60-4ab0-8f95-a03c6af543f0', name='Output2', auth=DomoAuth(domo_instance='domo-community', username=None), pdp_policies=None, domo_policies=None),\n",
+       " DomoDataset(id='4823950f-d754-474b-bddc-a6e7fec6df34', name='Output1', auth=DomoAuth(domo_instance='domo-community', username=None), pdp_policies=None, domo_policies=None),\n",
+       " DomoDataset(id='f17bae29-3caa-4408-afbd-e2130b7281a5', name='HarryPotter', auth=DomoAuth(domo_instance='domo-community', username=None), pdp_policies=None, domo_policies=None),\n",
+       " DomoDataset(id='7e8c4e24-6169-4e3b-ae51-65e4305b2e80', name='form_data_a2693a83-a265-4a27-8a4f-a0d4778273ba_APP_DB', auth=DomoAuth(domo_instance='domo-community', username=None), pdp_policies=None, domo_policies=None)]"
       ]
      },
      "execution_count": null,
@@ -397,7 +398,7 @@
    ],
    "source": [
     "domo_datasets = DomoDatasets(auth=auth)\n",
-    "domo_datasets.get_datasets()"
+    "domo_datasets.get_datasets()[0:5]"
    ]
   },
   {
@@ -426,8 +427,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "nbdev.nbdev_export('datasets.ipynb')"
+    "# | hide\n",
+    "nbdev.nbdev_export(\"datasets.ipynb\")"
    ]
   }
  ],
