--- a/nbs/feature/users.ipynb
+++ b/nbs/feature/users.ipynb
@@ -1,21 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "title: Users\n",
+    "output-file: feature/users.html\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp feature.users"
+    "# | default_exp feature.users"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Users\n",
-    "\n",
-    "- [ ] - get_users() route implemented without loop.  default limit is 50. "
+    "- [ ] - get_users() route implemented without loop. default limit is 50.\n"
    ]
   },
   {
@@ -24,9 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exporti\n",
+    "# | exporti\n",
     "\n",
-    "from dataclasses import dataclass , field\n",
+    "from dataclasses import dataclass, field\n",
     "\n",
     "import mbison.client.core as dmda"
    ]
@@ -37,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "import nbdev\n",
     "import os"
    ]
@@ -75,16 +84,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#| export\n",
-    "class User_API_Exception(dmda.API_Exception):\n",
-    "    def __init__(self, res, message= None):\n",
-    "\n",
-    "        super().__init__(res = res,message = message)"
+    "## Routes\n"
    ]
   },
   {
@@ -93,25 +96,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | exports\n",
+    "class User_API_Exception(dmda.API_Exception):\n",
+    "    def __init__(self, res, message=None):\n",
     "\n",
-    "def get_users(auth : dmda.DomoAuth , debug_api: bool = False):\n",
+    "        super().__init__(res=res, message=message)\n",
+    "\n",
+    "\n",
+    "def get_users(auth: dmda.DomoAuth, debug_api: bool = False):\n",
+    "    \"\"\"warning this is a paginated API, need to reimplement with Loop\"\"\"\n",
     "\n",
     "    endpoint = f\"/api/content/v3/users/\"\n",
     "\n",
     "    params = {\"includeDetails\": True}\n",
     "\n",
     "    res = dmda.domo_api_request(\n",
-    "        auth= auth,\n",
+    "        auth=auth,\n",
     "        endpoint=endpoint,\n",
-    "        request_type= \"GET\",\n",
-    "        params = params,\n",
-    "        debug_api= debug_api,\n",
+    "        request_type=\"GET\",\n",
+    "        params=params,\n",
+    "        debug_api=debug_api,\n",
     "    )\n",
     "\n",
-    "\n",
-    "    if not res.is_success and res.status == 404 :\n",
-    "        raise User_API_Exception(res, message = f\"unable to find user - {user_id}\")\n",
+    "    if not res.is_success and res.status == 404:\n",
+    "        raise User_API_Exception(res, message=f\"unable to retrieve users\")\n",
     "\n",
     "    return res"
    ]
@@ -151,7 +159,7 @@
     }
    ],
    "source": [
-    "res =get_users( auth =auth, debug_api = False)\n",
+    "res = get_users(auth=auth, debug_api=False)\n",
     "\n",
     "print(len(res.response))\n",
     "user = res.response[0]\n",
@@ -164,25 +172,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "\n",
-    "def get_user_by_id(user_id, auth : dmda.DomoAuth , debug_api: bool = False):\n",
+    "\n",
+    "def get_user_by_id(user_id, auth: dmda.DomoAuth, debug_api: bool = False):\n",
     "\n",
     "    endpoint = f\"/api/content/v3/users/{user_id}\"\n",
     "\n",
     "    params = {\"includeDetails\": True}\n",
     "\n",
     "    res = dmda.domo_api_request(\n",
-    "        auth= auth,\n",
+    "        auth=auth,\n",
     "        endpoint=endpoint,\n",
-    "        request_type= \"GET\",\n",
-    "        params = params,\n",
-    "        debug_api= debug_api,\n",
+    "        request_type=\"GET\",\n",
+    "        params=params,\n",
+    "        debug_api=debug_api,\n",
     "    )\n",
     "\n",
-    "\n",
-    "    if not res.is_success and res.status == 404 :\n",
-    "        raise User_API_Exception(res, message = f\"unable to find user - {user_id}\")\n",
+    "    if not res.is_success and res.status == 404:\n",
+    "        raise User_API_Exception(res, message=f\"unable to find user - {user_id}\")\n",
     "\n",
     "    return res"
    ]
@@ -215,7 +223,14 @@
     }
    ],
    "source": [
-    "(get_user_by_id(user_id = user['id'], auth =auth, debug_api = False)).response\n"
+    "(get_user_by_id(user_id=user[\"id\"], auth=auth, debug_api=False)).response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classes"
    ]
   },
   {
@@ -224,34 +239,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | exports\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class DomoUser:\n",
-    "    auth :dmda.DomoAuth = field(repr = False)\n",
+    "    auth: dmda.DomoAuth = field(repr=False)\n",
     "    id: str\n",
     "    display_name: str\n",
     "    role_id: int\n",
-    "    email : str\n",
+    "    email: str\n",
     "\n",
     "    @classmethod\n",
-    "    def from_json(cls, obj, auth : dmda.DomoAuth):\n",
+    "    def from_json(cls, obj, auth: dmda.DomoAuth):\n",
     "        return cls(\n",
-    "            auth = auth, \n",
-    "            id = obj['id'],\n",
-    "            display_name = obj['displayName'],\n",
-    "            role_id = obj['roleId'],\n",
-    "            email = obj['detail']['email']\n",
+    "            auth=auth,\n",
+    "            id=obj[\"id\"],\n",
+    "            display_name=obj[\"displayName\"],\n",
+    "            role_id=obj[\"roleId\"],\n",
+    "            email=obj[\"detail\"][\"email\"],\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    @classmethod\n",
-    "    def get_by_id(cls, user_id, auth, debug_api : bool = False, return_raw :bool = False):\n",
-    "        res = get_user_by_id(user_id = user_id, auth =auth, debug_api = debug_api)\n",
+    "    def get_by_id(\n",
+    "        cls, user_id, auth, debug_api: bool = False, return_raw: bool = False\n",
+    "    ):\n",
+    "        res = get_user_by_id(user_id=user_id, auth=auth, debug_api=debug_api)\n",
     "\n",
     "        if return_raw:\n",
     "            return res\n",
-    "        \n",
-    "        return cls.from_json(obj = res.response , auth = auth)"
+    "\n",
+    "        return cls.from_json(obj=res.response, auth=auth)"
    ]
   },
   {
@@ -271,7 +289,7 @@
     }
    ],
    "source": [
-    "DomoUser.get_by_id(user_id= user['id'], auth = auth)\n"
+    "DomoUser.get_by_id(user_id=user[\"id\"], auth=auth)"
    ]
   },
   {
@@ -280,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "\n",
     "\n",
     "nbdev.nbdev_export()"
